--- a/.htaccess
+++ b/.htaccess
@@ -3,9 +3,22 @@ AuthType basic
 AuthName "Ledendatabase Collegium Musicum"
 AuthUserFile /etc/apache2/ledendatabase.htpasswd
 
+
+
 RewriteEngine On
-RewriteRule ^query/(.*)$   exec-query.php?query=$1
-RewriteRule ^bewerken$     edit-people.php
+
+RewriteRule ^query/(.*)$            exec-query.php?query=$1
+
+RewriteRule ^bewerken$              edit-people.php
+RewriteRule ^bewerken/json/(.*)$    edit-people.php?json=$1
+
+RewriteRule ^css/humanity.css$      css/humanity/jquery-ui-1.8.12.custom.css
+RewriteRule ^js/jquery.js$          js/jquery-1.5.1.min.js
+RewriteRule ^js/jquery-ui.js$       js/jquery-ui-1.8.12.custom.min.js
+
+
+
+
 
 <Files ~ "\.php$">
     require valid-user
@@ -14,7 +27,7 @@ RewriteRule ^bewerken$     edit-people.php
     require valid-user
 </Files>
 
-<Files ~ "\.inc">
+<Files ~ "\.(inc|html)">
     order allow,deny
     deny from all
 </Files>
