--- a/.htaccess
+++ b/.htaccess
@@ -20,7 +20,7 @@ RewriteRule ^js/jquery.js$          js/jquery-1.5.1.min.js
 RewriteRule ^js/jquery-ui.js$       js/jquery-ui-1.8.12.custom.min.js
 
 
-
+RewriteRule ^aanmelden$             http://www.collegiummusicum.nl/joomla/index.php?option=com_content&view=article&id=96&Itemid=176  [R=301]
 
 
 
