--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,7 @@ RewriteRule ^css/humanity.css$      css/humanity/jquery-ui-1.8.12.custom.css
 RewriteRule ^js/jquery.js$          js/jquery-1.5.1.min.js
 RewriteRule ^js/jquery-ui.js$       js/jquery-ui-1.8.12.custom.min.js
 
+RewriteRule ^favicon.ico$           img/favicon.ico
 
 RewriteRule ^aanmelden$             http://www.collegiummusicum.nl/joomla/index.php?option=com_content&view=article&id=96&Itemid=176  [R=301]
 
