--- a/.htaccess
+++ b/.htaccess
@@ -18,6 +18,8 @@ RewriteRule ^bewerken/json/(.*)$    edit-people.php?json=$1                    [
 RewriteRule ^css/humanity.css$      css/humanity/jquery-ui-1.8.12.custom.css
 RewriteRule ^js/jquery.js$          js/jquery-1.5.1.min.js
 RewriteRule ^js/jquery-ui.js$       js/jquery-ui-1.8.12.custom.min.js
+RewriteRule ^js/admina.js$          cat.php                                    [L]
+RewriteRule ^css/admina.css$        cat.php                                    [L]
 
 RewriteRule ^favicon.ico$           img/favicon.ico
 
