--- a/.htaccess
+++ b/.htaccess
@@ -9,19 +9,26 @@ RewriteEngine On
 
 RewriteRule ^query/(.*)$            exec-query.php?query=$1                    [QSA]
 
+
 RewriteRule ^login$                 login.php
 RewriteRule ^logout$                login.php
+
 
 RewriteRule ^bewerken$              edit-people.php
 RewriteRule ^bewerken/json/(.*)$    edit-people.php?json=$1                    [QSA]
 
+
 RewriteRule ^css/humanity.css$      css/humanity/jquery-ui-1.8.12.custom.css
 RewriteRule ^js/jquery.js$          js/jquery-1.5.1.min.js
 RewriteRule ^js/jquery-ui.js$       js/jquery-ui-1.8.12.custom.min.js
+
 RewriteRule ^js/admina.js$          cat.php                                    [L]
 RewriteRule ^css/admina.css$        cat.php                                    [L]
+RewriteRule ^js/bewerken.js$        cat.php                                    [L]
+
 
 RewriteRule ^favicon.ico$           img/favicon.ico
+
 
 RewriteRule ^aanmelden$             http://www.collegiummusicum.nl/joomla/index.php?option=com_content&view=article&id=96&Itemid=176  [R=301]
 
